--- a/goitfe5homeworks/html/module_5_2/index.html
+++ b/goitfe5homeworks/html/module_5_2/index.html
@@ -8,75 +8,45 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    table {
-      height: 540px;
-      width: 500px;
-      background-color: black;
-      background-image: url(homework5_table.png);
-      color: green;
-    }
-    td {
-      border: 10px solid green;
-    }
-    .row1 {
-      height: 52px;
-    }
-    .row2 {
-      height: 138px;
-    }
-    .row3 {
-      height: 138px;
-    }
-
-
-
-
-
-
-    .cell1 {
-      width: 50px;
-    }
-  </style>
 </head>
 
 <body>
   <table>
     <tr class="row1">
-      <td colspan="2">Ячейка 1</td>
-      <td colspan="3">Ячейка 3</td>
-      <td colspan="2">Ячейка 6</td>
+      <td colspan="2"></td>
+      <td colspan="3"></td>
+      <td class="cell4 yellow" colspan="2"></td>
     </tr>
     <tr class="row2">
-      <td class="cell1">Ячейка 8</td>
-      <td colspan="4">Ячейка 9</td>
-      <td colspan="2">Ячейка 13</td>
+      <td class="cell1"></td>
+      <td class="red" colspan="4"></td>
+      <td class="yellow" colspan="2"></td>
     </tr>
     <tr class="row3">
-      <td rowspan="2">Ячейка 15</td>
-      <td colspan="4">Ячейка 16</td>
-      <td>Ячейка 20</td>
-      <td>Ячейка 21</td>
+      <td rowspan="2"></td>
+      <td class="red" colspan="4"></td>
+      <td></td>
+      <td></td>
     </tr>
-    <tr>
-      <td>Ячейка 23</td>
-      <td>Ячейка 24</td>
-      <td colspan="2">Ячейка 25</td>
-      <td colspan="2">Ячейка 27</td>
+    <tr class="row4">
+      <td class="cell2 black"></td>
+      <td class="cell2 black"></td>
+      <td class="cell3" colspan="2"></td>
+      <td colspan="2"></td>
     </tr>
-    <tr>
-      <td rowspan="3">Ячейка 29</td>
-      <td>Ячейка 30</td>
-      <td>Ячейка 31</td>
-      <td colspan="2">Ячейка 32</td>
-      <td colspan="2" rowspan="2">Ячейка 34</td>
+    <tr class="row5">
+      <td class="yellow" rowspan="3"></td>
+      <td class="black"></td>
+      <td class="black"></td>
+      <td class="cell3" colspan="2"></td>
+      <td class="blue" colspan="2" rowspan="2"></td>
     </tr>
-    <tr>
-      <td colspan="2" rowspan="2">Ячейка 37</td>
-      <td colspan="2">Ячейка 39</td>
+    <tr class="row6">
+      <td colspan="2" rowspan="2"></td>
+      <td class="black" colspan="2"></td>
     </tr>
-    <tr>
-      <td colspan="4">Ячейка 46</td>
+    <tr class="row7">
+      <td colspan="4"></td>
     </tr>
   </table>
 
