--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="goitfe5homeworks\html\module_5_1\index.html" target="_blank" title="Перейти">Homework #5-1 (...)</a>
           </li>
           <li>
-            <a href="goitfe5homeworks\html\module_5_2\index.html" target="_blank" title="Перейти">Homework #5-2 (...)</a>
+            <a href="goitfe5homeworks\html\module_5_2\index.html" target="_blank" title="Перейти">Homework #5-2 (Картина Пита Мондриана "Композиция с красным, синим и желтым")</a>
           </li>
         </ul>
       </section>
