--- a/goitfe5homeworks/html/module_5_2/index.html
+++ b/goitfe5homeworks/html/module_5_2/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Picture</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -49,7 +49,6 @@
       <td colspan="4"></td>
     </tr>
   </table>
-
 </body>
 
 </html>
