--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,30 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div class="wrapper">
-    <nav>
 
-    </nav>
-    
+<body>
+  <nav>
+    <ul>
+      <li>Meu YouBike</li>
+      <li>Vender</li>
+      <li>Forum</li>
+      <li>Contato</li>
+      <li>Ajuda</li>
+    </ul>
+  </nav>
+  <div class="wrapper">
+    <section>
+      <h1></h1>
+      <form id="registration" class="" action="index.html" method="post">
+        <input type="text" name="name" value="">
+        <input type="text" name="name" value="">
+        <input type="text" name="name" value="">
+        <input type="text" name="name" value="">
+      </form>
+    </section>
+
+
   </div>
 </body>
+
 </html>
