--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -11,13 +11,23 @@
 </head>
 
 <body>
-  <nav>
-    <ul>
-      <li>Meu YouBike</li>
-      <li>Vender</li>
-      <li>Forum</li>
-      <li>Contato</li>
-      <li>Ajuda</li>
+  <nav class="group">
+    <ul class="main-menu ">
+      <li>
+        <a href="#">Meu YouBike</a>
+      </li>
+      <li>
+        <a href="#">Vender</a>
+      </li>
+      <li>
+        <a href="#">Forum</a>
+      </li>
+      <li>
+        <a href="#">Contato</a>
+      </li>
+      <li>
+        <a href="#">Ajuda</a>
+      </li>
     </ul>
   </nav>
   <div class="wrapper">
@@ -30,7 +40,9 @@
         <input type="text" name="name" value="">
       </form>
     </section>
+<div class="hot">
 
+</div>
 
   </div>
 </body>
