--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h3 class="number">Module #5</h3>
         <ul>
           <li>
-            <a href="goitfe5homeworks\html\module_5_1\index.html" target="_blank" title="Перейти">Homework #5-1 (...)</a>
+            <a href="goitfe5homeworks\html\module_5_1\index.html" target="_blank" title="Перейти">Homework #5-1 (Cadastre)</a>
           </li>
           <li>
             <a href="goitfe5homeworks\html\module_5_2\index.html" target="_blank" title="Перейти">Homework #5-2 (Картина Пита Мондриана "Композиция с красным, синим и желтым")</a>
