Homework #5-1 Menu Bar Creation

--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -12,7 +12,16 @@
 
 <body>
   <nav class="group">
-    <ul class="first-menu ">
+<ul class="second-menu">
+      <li>
+        <a href="#">Minhas Ofertas</a>
+      </li>
+      <li>
+        <a href="#">Ola! Entrar ou Cadastre-se</a>
+      </li>
+    </ul>
+
+    <ul class="first-menu">
       <li>
         <a href="#">Meu YouBike</a>
       </li>
@@ -29,15 +38,25 @@
         <a href="#">Ajuda</a>
       </li>
     </ul>
+
+
   </nav>
   <div class="wrapper">
     <section>
       <h1></h1>
-      <form id="registration" class="" action="index.html" method="post">
-        <input type="text" name="name" value="">
-        <input type="text" name="name" value="">
-        <input type="text" name="name" value="">
-        <input type="text" name="name" value="">
+      <form class="" action="index.html" method="post">
+        <p>
+          <input type="text" name="name" value="">
+        </p>
+        <p>
+          <input type="text" name="name" value="">
+        </p>
+        <p>
+          <input type="text" name="name" value="">
+        </p>
+        <p>
+          <input type="text" name="name" value="">
+        </p>
       </form>
     </section>
 <div class="hot">
