Homework #5-1 Menu Bar Creation

--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -17,7 +17,7 @@
         <a href="#">Minhas Ofertas</a>
       </li>
       <li>
-        <a href="#">Ola! Entrar ou Cadastre-se</a>
+        <a href="#">Ola! <span class="underline">Entrar</span> ou <span class="underline">Cadastre-se</span></a>
       </li>
     </ul>
 
@@ -46,16 +46,19 @@
       <h1></h1>
       <form class="" action="index.html" method="post">
         <p>
-          <input type="text" name="name" value="">
+          <input type="text" name="firstname" value="">
         </p>
         <p>
-          <input type="text" name="name" value="">
+          <input type="text" name="lastname" value="">
         </p>
         <p>
-          <input type="text" name="name" value="">
+          <input type="text" name="email" value="">
         </p>
         <p>
-          <input type="text" name="name" value="">
+          <input type="text" name="password" value="">
+        </p>
+        <p>
+          <input type="text" name="password" value="">
         </p>
       </form>
     </section>
