--- a/goitfe5homeworks/html/module_5_2/index.html
+++ b/goitfe5homeworks/html/module_5_2/index.html
@@ -19,12 +19,11 @@
     </tr>
     <tr class="row2">
       <td class="cell1"></td>
-      <td class="red" colspan="4"></td>
+      <td class="red" colspan="4" rowspan="2"></td>
       <td class="yellow" colspan="2"></td>
     </tr>
     <tr class="row3">
       <td rowspan="2"></td>
-      <td class="red" colspan="4"></td>
       <td></td>
       <td></td>
     </tr>
