Homework #5-1 Menu Bar Creation

--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -15,13 +15,12 @@
     <nav class="group">
       <ul class="second-menu">
         <li>
-          <a href="#">Minhas Ofertas</a>
+          <a class="flag" href="#">Minhas Ofertas</a>
         </li>
         <li>
           <a href="#">Ola! <span class="underline">Entrar</span> ou <span class="underline">Cadastre-se</span></a>
         </li>
       </ul>
-
       <ul class="first-menu">
         <li>
           <a href="#">Meu YouBike</a>
@@ -39,8 +38,6 @@
           <a href="#">Ajuda</a>
         </li>
       </ul>
-
-
     </nav>
 
     <section>
