--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -39,24 +39,23 @@
         </li>
       </ul>
     </nav>
-
     <section>
-      <h1></h1>
-      <form class="" action="index.html" method="post">
+      <h1 class="header">Cadastre-se</h1>
+      <form class="forma" action="index.html" method="post">
         <p>
-          <input type="text" name="firstname" value="">
+          <input type="text" required name="firstname" placeholder="First Name" value="">
         </p>
         <p>
-          <input type="text" name="lastname" value="">
+          <input type="text" required name="lastname" placeholder="Last Name" value="">
         </p>
         <p>
-          <input type="text" name="email" value="">
+          <input type="text" required name="email" placeholder="Email Address" value="">
         </p>
         <p>
-          <input type="text" name="password" value="">
+          <input type="password" required name="password" placeholder="Choose Password" value="">
         </p>
         <p>
-          <input type="text" name="password" value="">
+          <input type="password" required name="password-conf" placeholder="Password Confirm" value="">
         </p>
       </form>
     </section>
