--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section>
       <h1 class="header">Cadastre-se</h1>
-      <form class="forma" action="index.html" method="post">
+      <form class="form" action="index.html" method="post">
         <p>
           <input type="text" required name="firstname" placeholder="First Name" value="">
         </p>
