--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -43,19 +43,30 @@
       <h1 class="header">Cadastre-se</h1>
       <form class="form" action="index.html" method="post">
         <ul>
-          <li><input class="field" type="text" required name="firstname" placeholder="First Name" value=""></li>
-          <li><input class="field" type="text" required name="lastname" placeholder="Last Name" value=""></li>
-          <li><input class="field" type="email" required name="email" placeholder="Email Address" value=""></li>
-          <li><input class="field" type="password" required name="password" placeholder="Choose Password" value=""></li>
-          <li><input class="field" type="password" required name="password-conf" placeholder="Password Confirm" value=""></li>
-          <li><input type="checkbox" name="youbike" value=""></li>
+          <li>
+            <input class="field" type="text" required name="firstname" placeholder="First Name" value="">
+          </li>
+          <li>
+            <input class="field" type="text" required name="lastname" placeholder="Last Name" value="">
+          </li>
+          <li>
+            <input class="field" type="email" required name="email" placeholder="Email Address" value="">
+          </li>
+          <li>
+            <input class="field" type="password" required name="password" placeholder="Choose Password" value="">
+          </li>
+          <li>
+            <input class="field" type="password" required name="password-conf" placeholder="Password Confirm" value="">
+          </li>
+          <li>
+            <input type="checkbox" name="youbike" value="">
+          </li>
         </ul>
+        <p>
+          By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.
+        </p>
       </form>
-      <p>
-        By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.
-      </p>
     </section>
-
   </div>
 </body>
 
