--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -44,22 +44,22 @@
       <form class="form" action="index.html" method="post">
         <ul>
           <li>
-            <input class="field" type="text" required name="firstname" placeholder="First Name" value="">
+            <input class="field" type="text" required name="firstname" placeholder="First Name">
           </li>
           <li>
-            <input class="field" type="text" required name="lastname" placeholder="Last Name" value="">
+            <input class="field" type="text" required name="lastname" placeholder="Last Name">
           </li>
           <li>
-            <input class="field" type="email" required name="email" placeholder="Email Address" value="">
+            <input class="field" type="email" required name="email" placeholder="Email Address">
           </li>
           <li>
-            <input class="field" type="password" required name="password" placeholder="Choose Password" value="">
+            <input class="field" type="password" required name="password" placeholder="Choose Password">
           </li>
           <li>
-            <input class="field" type="password" required name="password-conf" placeholder="Password Confirm" value="">
+            <input class="field" type="password" required name="password-conf" placeholder="Password Confirm">
           </li>
           <li>
-            <input type="checkbox" name="youbike" value="">
+            <label><input type="checkbox" name="youbike" value="">Send me Youbike updates and tips</label>
           </li>
         </ul>
         <p>
