--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -62,7 +62,7 @@
             <label><input type="checkbox" name="youbike" value="">Send me Youbike updates and tips</label>
           </li>
         </ul>
-        <p>
+        <p class="terms-of-service">
           By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.
         </p>
       </form>
