--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -61,9 +61,12 @@
           <li>
             <label><input type="checkbox" name="youbike" value="">Send me Youbike updates and tips</label>
           </li>
+          <li>
+            <input class="submit" type="submit" name="name" value="Create my Account">
+          </li>
         </ul>
         <p class="terms-of-service">
-          By clicking the button above, you agree to the Terms of Service Xiew our Privacy Policy.
+          By clicking the button above, you agree to the Terms of Service Xiew our <a href="#">Privacy Policy</a>.
         </p>
       </form>
     </section>
