--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -59,7 +59,7 @@
             <input class="field" type="password" required name="password-conf" placeholder="Password Confirm">
           </li>
           <li>
-            <label><input type="checkbox" name="youbike" value="">Send me Youbike updates and tips</label>
+            <label class="checkbox"><input type="checkbox" name="youbike" value="">Send me Youbike updates and tips</label>
           </li>
           <li>
             <input class="submit" type="submit" name="name" value="Create my Account">
