--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -23,19 +23,19 @@
       </ul>
       <ul class="first-menu">
         <li>
-          <a href="#">Meu YouBike</a>
+          <a href="#"><span class="bold">Meu YouBike</span></a>
         </li>
         <li>
-          <a href="#">Vender</a>
+          <a href="#"><span class="bold">Vender</span></a>
         </li>
         <li>
-          <a href="#">Forum</a>
+          <a href="#"><span class="bold">Forum</span></a>
         </li>
         <li>
-          <a href="#">Contato</a>
+          <a href="#"><span class="bold">Contato</span></a>
         </li>
         <li>
-          <a href="#">Ajuda</a>
+          <a href="#"><span class="bold">Ajuda</span></a>
         </li>
       </ul>
     </nav>
