--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -39,7 +39,7 @@
         </li>
       </ul>
     </nav>
-    <section>
+    <!-- <section>
       <h1 class="header">Cadastre-se</h1>
       <form class="form" action="index.html" method="post">
         <ul class="container">
@@ -70,7 +70,7 @@
           By clicking the button above, you agree to the Terms of Service Xiew our <a href="#">Privacy Policy</a>.
         </p>
       </form>
-    </section>
+    </section> -->
   </div>
 </body>
 
