--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -23,19 +23,19 @@
       </ul>
       <ul class="first-menu">
         <li>
-          <a href="#"><span class="bold">Meu YouBike</span></a>
+          <a href="#" title="Meu YouBike">Meu YouBike</a>
         </li>
         <li>
-          <a href="#"><span class="bold">Vender</span></a>
+          <a href="#" title="Vender">Vender</a>
         </li>
         <li>
-          <a href="#"><span class="bold">Forum</span></a>
+          <a href="#" title="Forum">Forum</a>
         </li>
         <li>
-          <a href="#"><span class="bold">Contato</span></a>
+          <a href="#" title="Contato">Contato</a>
         </li>
         <li>
-          <a href="#"><span class="bold">Ajuda</span></a>
+          <a href="#" title="Ajuda">Ajuda</a>
         </li>
       </ul>
     </nav>
