--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -42,6 +42,7 @@
     <section>
       <h1 class="header">Cadastre-se</h1>
       <form class="form" action="index.html" method="post">
+        <span class="line">OU</span>
         <ul class="container">
           <li>
             <input class="field" type="text" required name="firstname" placeholder="First Name">
