--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
           </li>
         </ul>
       </section>
+      <section class="task">
+        <h3 class="number">Module #6</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_6\index.html" target="_blank" title="Перейти">Homework #6 (Головняк верстальщика)</a>
+          </li>
+        </ul>
+      </section>
     </section>
   </div>
 </body>
