--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
           </li>
         </ul>
       </section>
+      <section class="task">
+        <h3 class="number">Module #7-8</h3>
+        <ul>
+          <li>
+            <a href="goitfe5homeworks\html\module_7-8\index.html" target="_blank" title="Перейти">Homework #7-8 (...)</a>
+          </li>
+        </ul>
+      </section>
     </section>
   </div>
 </body>
